#27 Modify CircelCI deploys to be done using AWS Roles and AWS OIDC Context | Modification of CircleCI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -233,6 +233,12 @@ jobs:
       - image: cimg/deploy:2023.09
     working_directory: ~/
     steps:
+      - aws-cli/setup:
+          role_arn: "arn:aws:iam::118388513628:role/avni_circleci_instance_connect"
+          region: "ap-south-1"
+      - setup_server_access:
+          instance-id: "i-0879e9c88952968ea"
+          availability-zone: "ap-south-1a"
       - deploy_as_service:
           env: "staging"
 
@@ -249,6 +255,12 @@ jobs:
       - image: cimg/deploy:2023.09
     working_directory: ~/
     steps:
+      - aws-cli/setup:
+          role_arn: "arn:aws:iam::118388513628:role/avni_circleci_instance_connect"
+          region: "ap-south-1"
+      - setup_server_access:
+          instance-id: "i-0cdce9ae698eb3462"
+          availability-zone: "ap-south-1b"
       - deploy_as_service:
           env: "prerelease"
 
@@ -257,6 +269,12 @@ jobs:
       - image: circleci/openjdk:8-jdk
     working_directory: ~/
     steps:
+      - aws-cli/setup:
+          role_arn: "arn:aws:iam::118388513628:role/avni_circleci_instance_connect"
+          region: "ap-south-1"
+      - setup_server_access:
+          instance-id: "i-0f30399b30e24a49b"
+          availability-zone: "ap-south-1a"
       - deploy:
           hostname: "ssh.perf.avniproject.org"
 
@@ -265,6 +283,12 @@ jobs:
       - image: cimg/deploy:2023.09
     working_directory: ~/
     steps:
+      - aws-cli/setup:
+          role_arn: "arn:aws:iam::118388513628:role/avni_circleci_instance_connect"
+          region: "ap-south-1"
+      - setup_server_access:
+          instance-id: "i-07df2679f68762a68"
+          availability-zone: "ap-south-1a"
       - deploy_as_service:
           env: "prod"
 
