#83 | Remove hardcoding of region

--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -61,6 +61,7 @@ avni.web.payload.encoding=${AVNI_WEB_PAYLOAD_ENCODING:false}
 # Cognito
 cognito.clientid=${OPENCHS_CLIENT_ID:dummy}
 cognito.poolid=${OPENCHS_USER_POOL:dummy}
+cognito.region=${OPENCHS_AWS_REGION:ap-south-1}
 
 # REST
 spring.jackson.serialization.fail-on-empty-beans=false
