#83 | Add test properties

--- a/avni-server-api/src/test/resources/application.properties
+++ b/avni-server-api/src/test/resources/application.properties
@@ -32,6 +32,7 @@ avni.legacy.longitudinal.export.limit=${AVNI_LEGACY_LONGITUDINAL_EXPORT_LIMIT:10
 cognito.clientid=dummy
 cognito.poolid=dummy
 avni.defaultUserName=admin
+cognito.region=${OPENCHS_AWS_REGION:ap-south-1}
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 #Bugsnag
 avni.bugsnag.apiKey=${OPENCHS_SERVER_BUGSNAG_API_KEY:dummy}
