avniproject/avni-webapp#1214 - added google phone number library for phone number checking. picking country code from account. removed phone number regex properties/variables.

--- a/avni-server-api/build.gradle
+++ b/avni-server-api/build.gradle
@@ -89,6 +89,7 @@ dependencies {
     implementation 'org.apache.tika:tika-core:2.7.0'
     compile 'org.owasp.encoder:encoder:1.2.3'
     implementation 'org.apache.commons:commons-csv:1.10.0'
+    compile 'com.googlecode.libphonenumber:libphonenumber:8.12.32'
 }
 
 bootRun {
