avniproject/avni-webapp#1133 | add missing properties to fix build break

--- a/avni-server-api/src/test/resources/application.properties
+++ b/avni-server-api/src/test/resources/application.properties
@@ -1,4 +1,9 @@
+# Application
 debug=false
+avni.defaultUserName=${OPENCHS_USER_NAME:admin}
+spring.servlet.multipart.max-file-size=10028KB
+spring.servlet.multipart.max-request-size=10028KB
+
 spring.datasource.url=${OPENCHS_DATABASE_URL:jdbc:postgresql://localhost:5432/openchs_test}
 spring.datasource.username=openchs
 spring.datasource.password=password
@@ -9,6 +14,9 @@ spring.datasource.tomcat.validationQuery=SELECT 1
 spring.datasource.tomcat.jdbc-interceptors=org.avni.server.framework.tomcat.SetOrganisationJdbcInterceptor
 spring.flyway.schemas=public
 spring.flyway.baseline-on-migrate=false
+
+
+
 # JPA, Hibernate and Spring Data
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
@@ -31,9 +39,9 @@ avni.longitudinal.export.v2.limit=${AVNI_LONGITUDINAL_EXPORT_V2_LIMIT:10000}
 avni.legacy.longitudinal.export.limit=${AVNI_LEGACY_LONGITUDINAL_EXPORT_LIMIT:10000}
 cognito.clientid=dummy
 cognito.poolid=dummy
-avni.defaultUserName=admin
 cognito.region=${OPENCHS_AWS_REGION:ap-south-1}
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
 #Bugsnag
 avni.bugsnag.apiKey=${OPENCHS_SERVER_BUGSNAG_API_KEY:dummy}
 avni.bugsnag.releaseStage=${OPENCHS_BUGSNAG_RELEASE_STAGE:development}
