--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -156,3 +156,6 @@ avni.reportingSystems[1].name=${AVNI_REPORTING_SYSTEM_1_NAME:}
 avni.reportingSystems[1].url=${AVNI_REPORTING_SYSTEM_1_URL:}
 avni.reportingSystems[2].name=${AVNI_REPORTING_SYSTEM_2_NAME:}
 avni.reportingSystems[2].url=${AVNI_REPORTING_SYSTEM_2_URL:}
+
+#metabase
+metabase.api.key=${METABASE_API_KEY:mb_hwsYP2sFN7fvwM5LTS4d/tnIqA5SeHUxwUhm2KAI1/o=}
