Made some changes in code (1)To distribute the logic across controller, service and repository.(2)Removed the unnecessary comments.(3)Fixed the hard coding . (4)Removed the try catch blocks(redundant)

--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -158,4 +158,9 @@ avni.reportingSystems[2].name=${AVNI_REPORTING_SYSTEM_2_NAME:}
 avni.reportingSystems[2].url=${AVNI_REPORTING_SYSTEM_2_URL:}
 
 #metabase
+metabase.api.url=http://localhost:3000/api
+database.host=localhost
+database.port=5432
+database.name=openchs
+database.engine=postgres
 metabase.api.key=${METABASE_API_KEY:mb_hwsYP2sFN7fvwM5LTS4d/tnIqA5SeHUxwUhm2KAI1/o=}
