#733 | Remove unnecessary params from application.properties

--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -4,7 +4,8 @@ spring.profiles.active=${OPENCHS_MODE:dev}
 # Database
 avni.database=${OPENCHS_DATABASE:openchs}
 avni.database.port=${OPENCHS_DATABASE_PORT:5432}
-spring.datasource.url=${OPENCHS_DATABASE_URL:jdbc:postgresql://localhost:${avni.database.port}/${avni.database}?currentSchema=public}
+avni.database.server=${OPENCHS_DATABASE_SERVER:localhost}
+spring.datasource.url=${OPENCHS_DATABASE_URL:jdbc:postgresql://${avni.database.server}:${avni.database.port}/${avni.database}?currentSchema=public}
 spring.datasource.username=${OPENCHS_DATABASE_USER:openchs}
 spring.datasource.password=${OPENCHS_DATABASE_PASSWORD:password}
 spring.datasource.driverClassName=org.postgresql.Driver
@@ -158,9 +159,5 @@ avni.reportingSystems[2].name=${AVNI_REPORTING_SYSTEM_2_NAME:}
 avni.reportingSystems[2].url=${AVNI_REPORTING_SYSTEM_2_URL:}
 
 #metabase
-metabase.api.url=http://localhost:3000/api
-database.host=localhost
-database.port=5432
-database.name=openchs
-database.engine=postgres
+metabase.api.url=${METABASE_API_URL:http://localhost:3000/api}
 metabase.api.key=${METABASE_API_KEY:mb_hwsYP2sFN7fvwM5LTS4d/tnIqA5SeHUxwUhm2KAI1/o=}
