--- a/avni-server-api/src/test/resources/application.properties
+++ b/avni-server-api/src/test/resources/application.properties
@@ -4,7 +4,10 @@ avni.defaultUserName=${OPENCHS_USER_NAME:admin}
 spring.servlet.multipart.max-file-size=10028KB
 spring.servlet.multipart.max-request-size=10028KB
 
-spring.datasource.url=${OPENCHS_DATABASE_URL:jdbc:postgresql://localhost:5432/openchs_test}
+avni.database=${OPENCHS_DATABASE:openchs}
+avni.database.port=${OPENCHS_DATABASE_PORT:5432}
+avni.database.server=${OPENCHS_DATABASE_SERVER:localhost}
+spring.datasource.url=${OPENCHS_DATABASE_URL:jdbc:postgresql://${avni.database.server}:5432/openchs_test}
 spring.datasource.username=openchs
 spring.datasource.password=password
 spring.datasource.driverClassName=org.postgresql.Driver
