--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -69,7 +69,7 @@ spring.jackson.serialization.fail-on-empty-beans=false
 spring.jackson.mapper.accept-case-insensitive-enums=true
 
 # Application
-debug=true
+debug=false
 avni.defaultUserName=${OPENCHS_USER_NAME:admin}
 spring.servlet.multipart.max-file-size=10028KB
 spring.servlet.multipart.max-request-size=10028KB
@@ -77,7 +77,7 @@ spring.servlet.multipart.max-request-size=10028KB
 # Network
 server.tomcat.protocol-header=x-forwarded-proto
 spring.security.require-ssl=true
-server.port=${OPENCHS_SERVER_PORT:8080}
+server.port=${OPENCHS_SERVER_PORT:8021}
 server.compression.enabled=true
 server.compression.min-response-size=2048
 server.compression.mime-types=application/json,application/xml,text/html,text/xml,text/plain,application/hal+json,application/javascript
