--- a/avni-server-api/src/test/resources/application.properties
+++ b/avni-server-api/src/test/resources/application.properties
@@ -19,7 +19,7 @@ spring.flyway.schemas=public
 spring.flyway.baseline-on-migrate=false
 
 # JPA, Hibernate and Spring Data
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.jadira.usertype.databaseZone=jvm
 spring.jpa.properties.jadira.usertype.javaZone=jvm
