--- a/avni-server-api/build.gradle
+++ b/avni-server-api/build.gradle
@@ -91,6 +91,7 @@ dependencies {
     implementation 'org.apache.commons:commons-csv:1.10.0'
     compile 'com.googlecode.libphonenumber:libphonenumber:8.12.32'
     testImplementation 'org.slf4j:slf4j-reload4j:2.0.6'
+    compile 'com.google.guava:guava:33.2.1-jre'
 }
 
 bootRun {
