#782 - version 2 of sync endpoints for reports related entities and end of life for previous endpoints.

--- a/avni-server-api/src/test/resources/application.properties
+++ b/avni-server-api/src/test/resources/application.properties
@@ -123,3 +123,6 @@ avni.keycloak.avni.publicKeyId=dummy
 #metabase
 metabase.api.url=${METABASE_API_URL:http://localhost:3000/api}
 metabase.api.key=${METABASE_API_KEY:mb_hwsYP2sFN7fvwM5LTS4d/tnIqA5SeHUxwUhm2KAI1/o=}
+
+# end of life
+avni.endpoints.endOfLife.1=2024-09-09
