--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -133,6 +133,7 @@ avni.keycloak.realm=On-premise
 server.tomcat.basedir=${OPENCHS_ACCESS_LOG_DIR:.}
 server.tomcat.accesslog.directory=log
 server.tomcat.accesslog.enabled=true
+server.tomcat.accesslog.max-days=90
 
 #Exotel
 avni.connectToExotelInDev=${OPENCHS_EXOTEL_IN_DEV:false}
