--- a/avni-server-api/src/test/resources/application.properties
+++ b/avni-server-api/src/test/resources/application.properties
@@ -18,6 +18,9 @@ spring.datasource.tomcat.jdbc-interceptors=org.avni.server.framework.tomcat.SetO
 spring.flyway.schemas=public
 spring.flyway.baseline-on-migrate=false
 
+#Tomcat
+server.tomcat.accesslog.max-days=90
+
 # JPA, Hibernate and Spring Data
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=none
