avniproject/avni-webapp#1348 | Fix test build break

--- a/avni-server-api/src/test/resources/application.properties
+++ b/avni-server-api/src/test/resources/application.properties
@@ -1,6 +1,7 @@
 # Application
 debug=false
 avni.defaultUserName=${OPENCHS_USER_NAME:admin}
+avni.environment=test
 spring.servlet.multipart.max-file-size=10028KB
 spring.servlet.multipart.max-request-size=10028KB
 
