--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -30,9 +30,9 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.jadira.usertype.databaseZone=jvm
 spring.jpa.properties.jadira.usertype.javaZone=jvm
 spring.jpa.properties.jadira.usertype.autoRegisterUserTypes=true
-spring.jpa.properties.hibernate.dialect=org.avni.server.framework.postgres.CHSPostgreSQL94Dialect
+spring.jpa.properties.hibernate.dialect=org.avni.server.framework.postgres.CHSPostgreSQLDialect
 spring.jpa.properties.hibernate.ejb.interceptor=org.avni.server.framework.hibernate.UpdateOrganisationHibernateInterceptor
-spring.jpa.database-platform=org.avni.server.framework.postgres.CHSPostgreSQL94Dialect
+spring.jpa.database-platform=org.avni.server.framework.postgres.CHSPostgreSQLDialect
 spring.jpa.hibernate.use-new-id-generator-mappings=true
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 avni.custom.query.timeout=${AVNI_CUSTOM_QUERY_TIMEOUT:3}
