--- a/avni-server-api/src/test/resources/application.properties
+++ b/avni-server-api/src/test/resources/application.properties
@@ -27,13 +27,13 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.jadira.usertype.databaseZone=jvm
 spring.jpa.properties.jadira.usertype.javaZone=jvm
 spring.jpa.properties.jadira.usertype.autoRegisterUserTypes=true
-spring.jpa.properties.hibernate.dialect=org.avni.server.framework.postgres.CHSPostgreSQL94Dialect
+spring.jpa.properties.hibernate.dialect=org.avni.server.framework.postgres.CHSPostgreSQLDialect
 spring.jpa.properties.hibernate.ejb.interceptor=org.avni.server.framework.hibernate.UpdateOrganisationHibernateInterceptor
 spring.jpa.properties.hibernate.cache.use_second_level_cache=true
 spring.jpa.properties.hibernate.cache.use_query_cache=true
 spring.jpa.properties.hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
 spring.cache.jcache.config=${AVNI_EHCACHE_FILE:classpath:ehcache.xml}
-spring.jpa.database-platform=org.avni.server.framework.postgres.CHSPostgreSQL94Dialect
+spring.jpa.database-platform=org.avni.server.framework.postgres.CHSPostgreSQLDialect
 spring.jpa.hibernate.use-new-id-generator-mappings=true
 spring.profiles.active=${OPENCHS_MODE:test}
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
