#813 - more javax => jakarta. hibernate/postgres related changes. changed date time from joda to javax in User entity. First IT passed - FormElementRepositoryTest

--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -44,7 +44,7 @@ spring.main.allow-bean-definition-overriding=true
 # Second level and Query cache. Also check ehcache.xml file.
 spring.jpa.properties.hibernate.cache.use_second_level_cache=true
 spring.jpa.properties.hibernate.cache.use_query_cache=true
-spring.jpa.properties.hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
+spring.jpa.properties.hibernate.cache.region.factory_class=org.hibernate.cache.jcache.JCacheRegionFactory
 
 # Hibernate Search
 spring.jpa.properties.hibernate.search.default.directory_provider=local-heap
@@ -166,3 +166,6 @@ metabase.api.key=${METABASE_API_KEY:mb_uhFRMqCSre4v/hTZTsQcMnh8k2GCZFX2tGmSBdoxN
 
 # end of life
 avni.endpoints.endOfLife.1=${AVNI_ENDPOINT_END_OF_LIFE_1:2024-09-05}
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+server.servlet.register-default-servlet=true
