--- a/avni-server-api/src/test/resources/application.properties
+++ b/avni-server-api/src/test/resources/application.properties
@@ -22,7 +22,7 @@ spring.flyway.baseline-on-migrate=false
 server.tomcat.accesslog.max-days=90
 
 # JPA, Hibernate and Spring Data
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.properties.jadira.usertype.databaseZone=jvm
 #spring.jpa.properties.jadira.usertype.javaZone=jvm
@@ -31,7 +31,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.ejb.interceptor=org.avni.server.framework.hibernate.UpdateOrganisationHibernateInterceptor
 spring.jpa.properties.hibernate.cache.use_second_level_cache=true
 spring.jpa.properties.hibernate.cache.use_query_cache=true
-spring.jpa.properties.hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
+spring.jpa.properties.hibernate.cache.region.factory_class=org.hibernate.cache.jcache.JCacheRegionFactory
 spring.cache.jcache.config=${AVNI_EHCACHE_FILE:classpath:ehcache.xml}
 #spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 spring.profiles.active=${OPENCHS_MODE:test}
@@ -130,3 +130,6 @@ metabase.api.key=${METABASE_API_KEY:mb_hwsYP2sFN7fvwM5LTS4d/tnIqA5SeHUxwUhm2KAI1
 
 # end of life
 avni.endpoints.endOfLife.1=2024-09-09
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+server.servlet.register-default-servlet=true
