--- a/avni-server-api/build.gradle
+++ b/avni-server-api/build.gradle
@@ -54,9 +54,12 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-security:${springBootVersion}")
     testImplementation "com.github.tomakehurst:wiremock-jre8-standalone:2.34.0"
     implementation "org.postgresql:postgresql"
-    implementation 'org.springframework.boot:spring-boot-starter-batch'
-    testImplementation 'org.springframework.batch:spring-batch-test'
+    implementation("org.springframework.boot:spring-boot-starter-batch:${springBootVersion}")
+    testImplementation 'org.springframework.batch:spring-batch-test:5.1.2'
     implementation "joda-time:joda-time"
+    implementation("org.hibernate:hibernate-java8:5.6.15.Final") {
+        exclude(group: 'org.hibernate', module: 'hibernate-core')
+    }
     runtimeOnly("javax.transaction:jta:1.1")
 //    implementation(group: 'org.jadira.usertype', name: 'usertype.core', version: '7.0.0.CR1') {
 //        exclude(group: 'org.hibernate', module: 'hibernate-core')
@@ -70,17 +73,17 @@ dependencies {
     implementation 'org.apache.httpcomponents:httpclient'
     implementation 'com.auth0:jwks-rsa:0.3.0'
     implementation 'com.auth0:java-jwt:3.3.0'
-    implementation(group: 'org.hibernate', name: 'hibernate-search-orm', version: '5.9.2.Final') {
-        exclude(group: 'org.hibernate', module: 'hibernate-core')
-    }
+//    implementation(group: 'org.hibernate', name: 'hibernate-search-orm', version: '5.9.2.Final') {
+//        exclude(group: 'org.hibernate', module: 'hibernate-core')
+//    }
     implementation 'com.bugsnag:bugsnag:3.+'
     implementation 'com.amazonaws:aws-java-sdk-s3'
     implementation 'com.amazonaws:aws-java-sdk-cognitoidp'
     implementation 'commons-validator:commons-validator:1.4.1'
     implementation 'org.passay:passay:1.6.3'
     implementation 'org.springframework.boot:spring-boot-starter-cache'
-    implementation 'org.keycloak:keycloak-spring-boot-starter:21.0.2'
-    implementation 'org.keycloak:keycloak-admin-client:21.0.2'
+    implementation 'org.keycloak:keycloak-spring-boot-starter:24.0.4'
+    implementation 'org.keycloak:keycloak-admin-client:24.0.2'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.4'
     implementation 'com.fasterxml.jackson.core:jackson-core:2.15.4'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.4'
@@ -89,6 +92,9 @@ dependencies {
     implementation('org.hibernate:hibernate-ehcache:5.6.15.Final') {
         exclude(group: 'org.hibernate', module: 'hibernate-core')
     }
+    runtimeOnly("javax.xml.bind:jaxb-api:2.3.1")
+    runtimeOnly('org.ehcache:ehcache:3.10.8')
+    runtimeOnly("org.hibernate:hibernate-jcache:6.5.1.Final")
     implementation 'javax.cache:cache-api:1.1.1'
     dev "org.springframework.boot:spring-boot-devtools:${springBootVersion}"
     testImplementation "org.mockito:mockito-core:2.23.4"
