#813 - changed all joda date types to Instant

--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -31,7 +31,7 @@ spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.properties.jadira.usertype.javaZone=jvm
 #spring.jpa.properties.jadira.usertype.autoRegisterUserTypes=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.ejb.interceptor=org.avni.server.framework.hibernate.UpdateOrganisationHibernateInterceptor
+spring.jpa.properties.hibernate.session_factory.interceptor=org.avni.server.framework.hibernate.UpdateOrganisationHibernateInterceptor
 #spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 avni.custom.query.timeout=${AVNI_CUSTOM_QUERY_TIMEOUT:3}
