--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -23,6 +23,8 @@ spring.flyway.enabled=${FLYWAY_ENABLED:true}
 spring.flyway.schemas=public
 spring.flyway.baseline-on-migrate=false
 spring.flyway.out-of-order=true
+spring.flyway.ignore-migration-patterns=repeatable:missing
+spring.flyway.table=schema_version
 
 # JPA, Hibernate and Spring Data
 spring.jpa.show-sql=${SHOW_SQL:false}
