#813 - upgraded 2nd level ehcache based hibernate configuration

--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -44,9 +44,13 @@ avni.legacy.longitudinal.export.limit=${AVNI_LEGACY_LONGITUDINAL_EXPORT_LIMIT:10
 spring.main.allow-bean-definition-overriding=true
 
 # Second level and Query cache. Also check ehcache.xml file.
+#https://docs.jboss.org/hibernate/orm/6.1/userguide/html_single/Hibernate_User_Guide.html#caching-provider-jcache
+#spring.cache.jcache.config=${AVNI_EHCACHE_FILE:classpath:ehcache.xml}
 spring.jpa.properties.hibernate.cache.use_second_level_cache=true
 spring.jpa.properties.hibernate.cache.use_query_cache=true
-spring.jpa.properties.hibernate.cache.region.factory_class=org.hibernate.cache.jcache.JCacheRegionFactory
+spring.jpa.properties.hibernate.cache.region.factory_class=jcache
+spring.jpa.properties.hibernate.javax.cache.provider=org.ehcache.jsr107.EhcacheCachingProvider
+spring.jpa.properties.hibernate.javax.cache.uri=${AVNI_EHCACHE_FILE:classpath://ehcache.xml}
 
 # Hibernate Search
 spring.jpa.properties.hibernate.search.default.directory_provider=local-heap
