avniproject/avni-server#826 | refactor: make org db password configurable

--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -166,3 +166,6 @@ metabase.api.key=${METABASE_API_KEY:mb_uhFRMqCSre4v/hTZTsQcMnh8k2GCZFX2tGmSBdoxN
 
 # end of life
 avni.endpoints.endOfLife.1=${AVNI_ENDPOINT_END_OF_LIFE_1:2024-09-05}
+
+#default org configuration
+avni.org.password=${AVNI_ORG_PASSWORD:password}
