--- a/avni-server-api/src/test/resources/application.properties
+++ b/avni-server-api/src/test/resources/application.properties
@@ -128,3 +128,6 @@ metabase.api.key=${METABASE_API_KEY:mb_hwsYP2sFN7fvwM5LTS4d/tnIqA5SeHUxwUhm2KAI1
 
 # end of life
 avni.endpoints.endOfLife.1=2024-09-09
+
+#default org configuration
+avni.org.password=${AVNI_DEFAULT_PASSWORD:password}
