--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.profiles.active=${OPENCHS_MODE:dev}
 # Database
 avni.database=${OPENCHS_DATABASE:openchs}
 avni.database.port=${OPENCHS_DATABASE_PORT:5432}
-avni.database.server=${OPENCHS_DATABASE_SERVER:localhost}
+avni.database.server=${OPENCHS_DATABASE_HOST:localhost}
 spring.datasource.url=${OPENCHS_DATABASE_URL:jdbc:postgresql://${avni.database.server}:${avni.database.port}/${avni.database}?currentSchema=public}
 spring.datasource.username=${OPENCHS_DATABASE_USER:openchs}
 spring.datasource.password=${OPENCHS_DATABASE_PASSWORD:password}
