avniproject/avni-server#826 | refactor: variable name change for default org password after review

--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -168,4 +168,4 @@ metabase.api.key=${METABASE_API_KEY:mb_uhFRMqCSre4v/hTZTsQcMnh8k2GCZFX2tGmSBdoxN
 avni.endpoints.endOfLife.1=${AVNI_ENDPOINT_END_OF_LIFE_1:2024-09-05}
 
 #default org configuration
-avni.org.password=${AVNI_ORG_PASSWORD:password}
+avni.default.org.user.db.password=${AVNI_DEFAULT_ORG_USER_DB_PASSWORD:password}
