--- a/avni-server-api/src/test/resources/application.properties
+++ b/avni-server-api/src/test/resources/application.properties
@@ -130,4 +130,4 @@ metabase.api.key=${METABASE_API_KEY:mb_hwsYP2sFN7fvwM5LTS4d/tnIqA5SeHUxwUhm2KAI1
 avni.endpoints.endOfLife.1=2024-09-09
 
 #default org configuration
-avni.org.password=${AVNI_ORG_PASSWORD:password}
+avni.default.org.user.db.password=${AVNI_DEFAULT_ORG_USER_DB_PASSWORD:password}
