--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,5 @@
 rootProject.name = 'avni-server'
 include ':avni-server-api'
 project(':avni-server-api').projectDir = "$rootDir/avni-server-api" as File
+include 'avni-server-data'
+
