#835 - maven dependency on the new module. added missing dependencies to the new module

--- a/avni-server-api/build.gradle
+++ b/avni-server-api/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation group: 'org.apache.tomcat', name: 'tomcat-jdbc'
     implementation("org.springframework.boot:spring-boot-starter-web:${springBootVersion}")
     implementation("org.springframework.boot:spring-boot-starter-cache:${springBootVersion}")
+    implementation project(path: ':avni-server-data')
     testImplementation "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
     implementation "org.springframework.boot:spring-boot-starter-data-rest:${springBootVersion}"
     implementation("org.springframework.boot:spring-boot-starter-security:${springBootVersion}")
