--- a/avni-server-data/build.gradle
+++ b/avni-server-data/build.gradle
@@ -2,18 +2,25 @@ buildscript {
     ext {
         springBootVersion = '3.3.5'
     }
+    repositories { mavenCentral() }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+    }
 }
 
 plugins {
+    id 'org.springframework.boot' version "${springBootVersion}"
+    id 'io.spring.dependency-management' version '1.1.6'
     id 'java'
 }
 
+apply plugin: 'java'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'idea'
+apply plugin: 'io.spring.dependency-management'
+
 group = 'org.openchs'
 version = '0.0.1-SNAPSHOT'
-
-repositories {
-    mavenCentral()
-}
 
 dependencies {
     implementation "org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}"
@@ -25,6 +32,8 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.4'
     implementation 'com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.15.2'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-joda:2.15.4'
+    implementation 'commons-validator:commons-validator:1.4.1'
+    implementation "org.postgresql:postgresql"
     implementation("org.hibernate:hibernate-java8:5.6.15.Final") {
         exclude(group: 'org.hibernate', module: 'hibernate-core')
     }
@@ -34,6 +43,14 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation "org.mockito:mockito-core:3.12.4"
+    implementation("jakarta.validation:jakarta.validation-api:3.0.2")
+}
+
+dependencyManagement {
+    imports {
+        mavenBom("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
+        mavenBom 'com.amazonaws:aws-java-sdk-bom:1.11.600'
+    }
 }
 
 test {
